# nes-emulator

./: .gitignore  .gitmodules  Cargo.toml  README.md  startup_instruction_trace.txt
examples/: test_instructions.rs
src/: apu.rs  bus.rs  cpu.rs  debug.rs  display.rs  graphical_debug.rs  ines.rs  instructions.rs  main.rs  runtime.rs
src/cartridge/: mod.rs
src/cpu/: execution.rs  helper.rs  instructions.rs  mod.rs  processor_status.rs
src/cpu/instruction/: mod.rs
src/cpu/instruction/execution/: arithmetic.rs  branches.rs  incr_decr.rs  jumps_calls.rs  load_store.rs  logical.rs  mod.rs  register_transfers.rs  shifts.rs  stack.rs  status_flags.rs  system.rs
src/cpu/instructions/: full_opcode_parsing.rs  mod.rs
src/ppu/: mod.rs
